[tool.poetry]
name = "inventory"
version = "0.1.0"
description = ""
authors = ["vocaoo <vocao2308@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uuid6 = "^2024.1.12"
didiator = "^0.3.1"
adaptix = "^3.0.0b5"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
